[package]
name = "bevy-pigeon"
version = "0.5.0"
authors = ["Mitchell Marino <mitchoah@gmail.com>"]
edition = "2021"
description = "The bevy plugin for carrier-pigeon."
readme = "README.md"
repository = "https://github.com/MitchellMarinoDev/bevy-pigeon/"
license = "MIT OR Apache-2.0"
keywords = ["game", "gamedev", "networking", "bevy"]
categories = ["game-development", "network-programming"]
autoexamples = false

[[example]]
name = "mvp"

[[example]]
name = "player"

[dev-dependencies]
bevy = "0.13.1"

[dependencies]
carrier-pigeon = { git = "https://github.com/MitchellMarinoDev/carrier-pigeon", features = ["bevy"] }
bevy = { version = "0.13.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bevy_pbr = "0.13.2"

[features]
default = ["types"]
types = ['bevy/bevy_render']
